5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1592_1806.log
== TEST (2019-03-31 18:47:50) 
-- CODE:
from math import
n = int(input("pessoas: "))

den1 = factorial(365)
div1 = factorial(365 - n)
par1 = den1 / div1

div2 = 365 ** n
par2 = 1 / div2

p = 1 - (par1 * par2)
pct = p * 100

print(round(pct, 2))
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:48:02) 
-- CODE:
from math import *
n = int(input("pessoas: "))

den1 = factorial(365)
div1 = factorial(365 - n)
par1 = den1 / div1

div2 = 365 ** n
par2 = 1 / div2

p = 1 - (par1 * par2)
pct = p * 100

print(round(pct, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:48:10) 
-- CODE:
from math import *
n = int(input("pessoas: "))

den1 = factorial(365)
div1 = factorial(365 - n)
par1 = den1 / div1

div2 = 365 ** n
par2 = 1 / div2

p = 1 - (par1 * par2)
pct = p * 100

print(round(pct, 2))
-- EXECUTION TIME:
0.15995
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
